--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -39,6 +39,11 @@
 <li><%= f.label :administrative_hours_volunteer %> <%= f.text_field :administrative_hours_volunteer %></li>
 <li><%= f.label :unduplicated_riders %> <%= f.text_field :unduplicated_riders %></li>
 <li><%= f.label :allocation %> <%= f.collection_select :allocation_id, @allocations, :id, :name %></li.
+
+<li><%= f.label :administrative %> <%= f.text_field :administrative %></li>
+<li><%= f.label :operations %> <%= f.text_field :operations %></li>
+<li><%= f.label :vehicle_maint %> <%= f.text_field :vehicle_maint %></li>
+
 <li><%= f.label :complete %><%= f.check_box :complete %></li>
 
 </ul>
