Separate fares from donations, remove donations_fares.

--- a/app/views/network/_nested_rows.html.erb
+++ b/app/views/network/_nested_rows.html.erb
@@ -20,7 +20,8 @@
 <% if @fields.member? 'funds' %><td><%= '%.2f' % row.funds %></td><%end%>
 <% if @fields.member? 'agency_other' %><td><%= '%.2f' % row.agency_other %></td><%end%>
 <% if @fields.member? 'vehicle_maint' %><td><%= '%.2f' % row.vehicle_maint %></td><%end%>
-<% if @fields.member? 'donations_fares' %><td><%= '%.2f' % row.donations_fares %></td><%end%>
+<% if @fields.member? 'donations' %><td><%= '%.2f' % row.donations %></td><%end%>
+<% if @fields.member? 'fares' %><td><%= '%.2f' % row.fares %></td><%end%>
 <% if @fields.member? 'total' %><td><%= '%.2f' % row.total %></td><%end%>
 <% if @fields.member? 'in_district_trips' %><td><%= row.in_district_trips %></td><%end%>
 <% if @fields.member? 'out_of_district_trips' %><td><%= row.out_of_district_trips %></td><%end%>
@@ -52,7 +53,8 @@
 <% if @fields.member? 'funds' %><td><%= '%.2f' % row.funds %></td><%end%>
 <% if @fields.member? 'agency_other' %><td><%= '%.2f' % row.agency_other %></td><%end%>
 <% if @fields.member? 'vehicle_maint' %><td><%= '%.2f' % row.vehicle_maint %></td><%end%>
-<% if @fields.member? 'donations_fares' %><td><%= '%.2f' % row.donations_fares %></td><%end%>
+<% if @fields.member? 'donations' %><td><%= '%.2f' % row.donations %></td><%end%>
+<% if @fields.member? 'fares' %><td><%= '%.2f' % row.fares %></td><%end%>
 <% if @fields.member? 'total' %><td><%= '%.2f' % row.total %></td><%end%>
 <% if @fields.member? 'in_district_trips' %><td><%= row.in_district_trips %></td><%end%>
 <% if @fields.member? 'out_of_district_trips' %><td><%= row.out_of_district_trips %></td><%end%>
