--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -22,7 +22,7 @@
                   <input type="checkbox" checked name="q[f[funds]]" id="funds" value="1" /><label for="funds">Funds</label><br />
                   <input type="checkbox" checked name="q[f[fares]]" id="fares" value="1" /><label for="fares">Fares</label><br />
                   <input type="checkbox" checked name="q[f[agency_other]]" id="agency_other" value="1" /><label for="agency_other">Agency Other</label><br />
-                  <input type="checkbox" checked name="q[f[vehicle_maint]]" id="vehicle_maint" value="1" /><label for="vehicle_maint">Vechicle Maint.</label><br />
+                  <input type="checkbox" checked name="q[f[vehicle_maint]]" id="vehicle_maint" value="1" /><label for="vehicle_maint">Vehicle Maint.</label><br />
                   <input type="checkbox" checked name="q[f[donations_fares]]" id="donations_fares" value="1" /><label for="donations_fares">Donations Fares</label><br />
                   <input type="checkbox" checked name="q[f[total]]" id="total" value="1" /><label for="total">Total</label>
                 </div>
