--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -23,7 +23,8 @@
                   <input type="checkbox" checked name="q[f[fares]]" id="fares" value="1" /><label for="fares">Fares</label><br />
                   <input type="checkbox" checked name="q[f[agency_other]]" id="agency_other" value="1" /><label for="agency_other">Agency Other</label><br />
                   <input type="checkbox" checked name="q[f[vehicle_maint]]" id="vehicle_maint" value="1" /><label for="vehicle_maint">Vehicle Maint.</label><br />
-                  <input type="checkbox" checked name="q[f[donations_fares]]" id="donations_fares" value="1" /><label for="donations_fares">Donations Fares</label><br />
+                  <input type="checkbox" checked name="q[f[donations]]" id="donations" value="1" /><label for="donations">Donations</label><br />
+                  <input type="checkbox" checked name="q[f[fares]]" id="fares" value="1" /><label for="fares">Fares</label><br />
                   <input type="checkbox" checked name="q[f[total]]" id="total" value="1" /><label for="total">Total</label>
                 </div>
                 <div class="fourcol">
