add administrative data to network reports

--- a/app/views/network/_nested_rows.html.erb
+++ b/app/views/network/_nested_rows.html.erb
@@ -20,6 +20,8 @@
 <% if @fields.member? 'funds' %><td><%= '%.2f' % row.funds %></td><%end%>
 <% if @fields.member? 'agency_other' %><td><%= '%.2f' % row.agency_other %></td><%end%>
 <% if @fields.member? 'vehicle_maint' %><td><%= '%.2f' % row.vehicle_maint %></td><%end%>
+<% if @fields.member? 'administrative' %><td><%= '%.2f' % row.administrative %></td><%end%>
+<% if @fields.member? 'operations' %><td><%= '%.2f' % row.operations %></td><%end%>
 <% if @fields.member? 'donations' %><td><%= '%.2f' % row.donations %></td><%end%>
 <% if @fields.member? 'fares' %><td><%= '%.2f' % row.fares %></td><%end%>
 <% if @fields.member? 'total' %><td><%= '%.2f' % row.total %></td><%end%>
@@ -53,6 +55,8 @@
 <% if @fields.member? 'funds' %><td><%= '%.2f' % row.funds %></td><%end%>
 <% if @fields.member? 'agency_other' %><td><%= '%.2f' % row.agency_other %></td><%end%>
 <% if @fields.member? 'vehicle_maint' %><td><%= '%.2f' % row.vehicle_maint %></td><%end%>
+<% if @fields.member? 'operations' %><td><%= '%.2f' % row.operations %></td><%end%>
+<% if @fields.member? 'administrative' %><td><%= '%.2f' % row.administrative %></td><%end%>
 <% if @fields.member? 'donations' %><td><%= '%.2f' % row.donations %></td><%end%>
 <% if @fields.member? 'fares' %><td><%= '%.2f' % row.fares %></td><%end%>
 <% if @fields.member? 'total' %><td><%= '%.2f' % row.total %></td><%end%>
