--- a/app/views/network/report.html.erb
+++ b/app/views/network/report.html.erb
@@ -12,6 +12,8 @@
 <% if @fields.member? 'funds' %><th rowspan="2">Funds</th><% end %>
 <% if @fields.member? 'agency_other' %><th rowspan="2">Agency Other</th><% end %>
 <% if @fields.member? 'vehicle_maint' %><th rowspan="2">Vehicle Maint.</th><% end %>
+<% if @fields.member? 'administrative' %><th rowspan="2">Administrative</th><% end %>
+<% if @fields.member? 'operations' %><th rowspan="2">Operations</th><% end %>
 <% if @fields.member? 'donations' %><th rowspan="2">Donations</th><% end %>
 <% if @fields.member? 'fares' %><th rowspan="2">Fares</th><% end %>
 <% if @fields.member? 'total' %><th rowspan="2">Total</th><% end %>
