--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -23,6 +23,8 @@
                   <input type="checkbox" checked name="q[f[fares]]" id="fares" value="1" /><label for="fares">Fares</label><br />
                   <input type="checkbox" checked name="q[f[agency_other]]" id="agency_other" value="1" /><label for="agency_other">Agency Other</label><br />
                   <input type="checkbox" checked name="q[f[vehicle_maint]]" id="vehicle_maint" value="1" /><label for="vehicle_maint">Vehicle Maint.</label><br />
+                  <input type="checkbox" checked name="q[f[operations]]" id="operations" value="1" /><label for="operations">Operations</label><br />
+                  <input type="checkbox" checked name="q[f[administrative]]" id="administrative" value="1" /><label for="administrative">Administrative</label><br />
                   <input type="checkbox" checked name="q[f[donations]]" id="donations" value="1" /><label for="donations">Donations</label><br />
                   <input type="checkbox" checked name="q[f[fares]]" id="fares" value="1" /><label for="fares">Fares</label><br />
                   <input type="checkbox" checked name="q[f[total]]" id="total" value="1" /><label for="total">Total</label>
