--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -42,6 +42,7 @@
                   <input type="checkbox" checked name="q[f[cost_per_trip]]" id="cost_per_trip" value="1" /><label for="cost_per_trip">Cost/Trip</label><br />
                   <input type="checkbox" checked name="q[f[cost_per_mile]]" id="cost_per_mile" value="1" /><label for="cost_per_mile">Cost/Mile</label><br />
                   <input type="checkbox" checked name="q[f[cost_per_hour]]" id="cost_per_hour" value="1" /><label for="cost_per_hour">Cost/Hour</label>
+                  <input type="checkbox" name="q[f[miles_per_ride]]" id="miles_per_ride" value="1" /><label for="miles_per_ride">Miles/Ride</label>
                 </div>
                 <div class="fourcol">
                   <input type="checkbox" checked name="q[f[turn_downs]]" id="turn_downs" value="1" /><label for="turn_downs">Turn Downs</label><br />
