--- a/app/views/layouts/network.html.erb
+++ b/app/views/layouts/network.html.erb
@@ -3,6 +3,7 @@
           <li><%= link_to "Create Report", :action=>:show_create_report %></li>
           <li><%= link_to "Allocation Tags", :action=>:tag_index %></li>
           <li><%= link_to "View Network Summary", :action=>:index %></li>
+          <li><%= link_to "Quarterly Narrative Report", :action=>:show_create_quarterly  %></li>
         </ul>
 <% end %>
 
