--- a/app/views/network/_report.html.erb
+++ b/app/views/network/_report.html.erb
@@ -35,7 +35,7 @@
              </tr>
            </thead>
            <tbody>
-	     <%= render :partial=> "nested_rows", :locals=>{:rows=>results, :group_fields=>@group_fields} %>
+	     <%= render :partial=> "nested_rows", :locals=>{:rows=>results, :group_fields=>group_fields} %>
            </tbody>
          </table>
 
