--- a/app/views/network/quarterly_narrative_report.html.erb
+++ b/app/views/network/quarterly_narrative_report.html.erb
@@ -13,7 +13,7 @@ Funding Source: <%= allocation.project.funding_source %><br/>
 source. If any discrepencies are found, they should be reported on the
 last page of this report. In the event there is a discrepency with
 ride numbers, please indicate your corrections in terms of "in" and
-"out" of district rides and which Ride Purpose catagories this change
+"out" of district rides and which Ride Purpose categories this change
 effects.</div>
 
 <%= render :partial=> "report", :locals=>{:results=>rows, :group_fields=>@group_fields[1..-1]} %>
