initial work on saving whole reports; needs work

--- a/app/views/layouts/network.html.erb
+++ b/app/views/layouts/network.html.erb
@@ -1,7 +1,7 @@
 <% content_for :menu_bar do %>
         <ul id="sitenav" class="selfclear">
           <li><%= link_to "Create Report", :action=>:show_create_report %></li>
-          <li><%= link_to "Allocation Tags", :action=>:tag_index %></li>
+          <li><%= link_to "Predefined Reports", :action=>:report_index %></li>
           <li><%= link_to "View Network Summary", :action=>:index %></li>
           <li><%= link_to "Quarterly Narrative Report", :action=>:show_create_quarterly  %></li>
         </ul>
