Comp of ride purpose report, typo correction, switch to use selectmenu instead of comboboxes to prevent submitting invalid option fragment

--- a/app/views/network/quarterly_narrative_report.html.erb
+++ b/app/views/network/quarterly_narrative_report.html.erb
@@ -10,8 +10,8 @@ County: <%= allocation.county %><br/>
 Funding Source: <%= allocation.project.funding_source %><br/>
 
 <div>Instructions: Please review the numbers provided for this funding
-source. If any discrepencies are found, they should be reported on the
-last page of this report. In the event there is a discrepency with
+source. If any discrepancies are found, they should be reported on the
+last page of this report. In the event there is a discrepancy with
 ride numbers, please indicate your corrections in terms of "in" and
 "out" of district rides and which Ride Purpose categories this change
 effects.</div>
