--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,14 @@
   
   <%= stylesheet_link_tag 'ui.combobox.css' %>
   <%= stylesheet_link_tag 'ui-custom/jquery-ui-1.8.6.custom.css' %>
+  <%= stylesheet_link_tag 'ui.selectmenu.css' %>
   <%= stylesheet_link_tag 'ui.spinner.css' %>
   
   <%= stylesheet_link_tag 'application' %>
 
   <%= javascript_include_tag 'jquery-1.4.2.min' %>
   <%= javascript_include_tag 'jquery-ui-1.8.6.custom.min' %>
+  <%= javascript_include_tag 'jquery-ui-selectmenu' %>
   <%= javascript_include_tag 'ui.spinner.min' %>
   <%= javascript_include_tag 'application' %>
 
