--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= stylesheet_link_tag 'ui.combobox.css' %>
   <%= stylesheet_link_tag 'ui-custom/jquery-ui-1.8.6.custom.css' %>
   <%= stylesheet_link_tag 'ui.selectmenu.css' %>
+  <%= stylesheet_link_tag 'jquery.multiselect.css' %>
   <%= stylesheet_link_tag 'ui.spinner.css' %>
   
   <%= stylesheet_link_tag 'application' %>
@@ -16,6 +17,7 @@
   <%= javascript_include_tag 'jquery-1.4.2.min' %>
   <%= javascript_include_tag 'jquery-ui-1.8.6.custom.min' %>
   <%= javascript_include_tag 'jquery-ui-selectmenu' %>
+  <%= javascript_include_tag 'jquery.multiselect.min' %>
   <%= javascript_include_tag 'ui.spinner.min' %>
   <%= javascript_include_tag 'application' %>
 
