link to ride purpose report

--- a/app/views/layouts/network.html.erb
+++ b/app/views/layouts/network.html.erb
@@ -4,6 +4,7 @@
           <li><%= link_to "Predefined Reports", :action=>:report_index %></li>
           <li><%= link_to "View Network Summary", :action=>:index %></li>
           <li><%= link_to "Quarterly Narrative Report", :action=>:show_create_quarterly  %></li>
+          <li><%= link_to "Ride Purpose Report", :action=>:show_ride_purpose_report  %></li>
         </ul>
 <% end %>
 
