allow deleting predefined reports

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <%= javascript_include_tag 'jquery-ui-1.8.6.custom.min' %>
   <%= javascript_include_tag 'jquery-ui-selectmenu' %>
   <%= javascript_include_tag 'jquery.multiselect.min' %>
+  <%= javascript_include_tag 'rails' %>
   <%= javascript_include_tag 'ui.spinner.min' %>
   <%= javascript_include_tag 'application' %>
 
